# IntervalAssignment

./: .gitignore  COPYRIGHT  LICENSE  README.md  todo.txt
IntervalAssignment-xcode/IntervalAssignment-xcode.xcodeproj/: project.pbxproj
IntervalAssignment-xcode/IntervalAssignment-xcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IntervalAssignment-xcode/IntervalAssignment-xcode.xcodeproj/project.xcworkspace/xcuserdata/samitch.xcuserdatad/: UserInterfaceState.xcuserstate
IntervalAssignment-xcode/IntervalAssignment-xcode.xcodeproj/xcuserdata/samitch.xcuserdatad/xcschemes/: xcschememanagement.plist
Source/: CMakeLists.txt  CpuTimer.cpp  CpuTimer.h  IA.cpp  IA.h  IAEnums.h  IAInline.h  IAQueue.cpp  IAQueue.h  IAResult.cpp  IAResult.h  IAResultImplementation.cpp  IAResultImplementation.h  IncrementalIntervalAssignment.cpp  IncrementalIntervalAssignment.h  test.cpp  test.h
Source/all-tests-cubit/Source Files/: test.cpp
Test/: iia-cubit-autotest-onetest.cpp  iia-cubit-autotest-scale-fin-pave1.cpp  iia-cubit-autotest-scale-fin-pave3.cpp  iia-cubit-autotest-scale-fin-pave4.cpp
